# Submission_Snapshot_CIDL

CIDL-1.0.0/: LICENSE  README.md  pyproject.toml
CIDL-1.0.0/data_processing/raw_data_for_validation/: README.md
CIDL-1.0.0/documentation/: ACIC22 - Data Info.md  ACIC22 - FAQ.md  CIDL - Access Configuration (S3).md  CIDL - Installation Guide.md
CIDL-1.0.0/example/: Quickstart.py
CIDL-1.0.0/metadata/: acic22_data_dict.json  acic22_dgp_info.json  acic22_metadata.json  acic22_practice_metadata.json
CIDL-1.0.0/src/cidl/: __init__.py  config.py  connection.py  data_loader.py  indices_selection.py  metadata_info.py  objectkey_resolution.py  truth_loader.py
CIDL-1.0.0/tests/: conftest.py  test_00_environment.py  test_00_integrity.py  test_r1_addressing.py  test_r2_truth.py  test_r3_sampling.py  test_r4_access_modes.py  test_r4_access_modes_additional_smoke_test.py  test_r5_diagnostics.py  test_r6_credentials.py  test_r7_contexts.py
CIDL-1.0.0/tests/outputs/: all_tests_output.txt  test_00_environment_output.txt  test_00_integrity_output.txt  test_r1_addressing_output.txt  test_r2_truth_output.txt  test_r3_sampling_output.txt  test_r4_access_modes_additional_smoke_test_output.txt  test_r4_access_modes_output.txt  test_r5_diagnostics_output.txt  test_r6_credentials_output.txt  test_r7_contexts_output.txt
CIDL-1.0.0/tests/outputs/test_r5_1_messages/: invalid_endpoint.txt  invalid_secret_key.txt  metadata_contract_violation.txt  missing_object.txt  missing_profile.txt  permission_error.txt
