[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cidl"
version = "0.6.0"
description = "S3 utilities and data handling for CIDL project"
authors = [{ name="Dein Name", email="dein.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26",
    "tqdm>=4.65",
    "pandas>=2.0",
    "pyarrow>=14.0"
]


[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
packages = ["cidl"]
package-dir = {"" = "src"}
