[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cidl-uhh"
version = "0.7.0"
license = "MIT"
license-files = [
    "LICENSE"
]
description = "Read-only Python access library for remotely hosted causal inference benchmark datasets."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "JDenzel", email = "julian.denzel@studium.uni-hamburg.de" }
]
dependencies = [
    "boto3>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tqdm>=4.65"
]

[project.urls]
Repository = "https://github.com/JDenzel-UHH/CIDL"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
